<resources>
    <string name="app_name">RMAS Projekat</string>
    <string name="log_in">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_profile_click_here_to_register">Don\'t have a profile? click here to register.</string>
    <string name="hello_world">Hello World!</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_a_new_marker">Add a new marker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="back_to_log_in_page">Back to Log-In page.</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="location_address">Location Address</string>
    <string name="location_type">Location Type</string>
    <string name="lat_lng">Latitude and Longitude</string>
    <string name="average_rating">Average Rating</string>
    <string name="location_name">Location Name</string>
    <string name="add_review">Add Review</string>
    <string name="add_photo">Add Photo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="likes">likes</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="author_name">Author Name</string>
    <string name="date_of_creation">Date of creation: All Time</string>
    <string name="change">Change</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="set_date_range">Set Date Range</string>
    <string name="radius_1km">Radius: 1km</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="open_gallery">Open Gallery</string>
</resources>