<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="50dp"
    tools:context=".fragments.LocationFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E0E0E0"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tvLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvAvgRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_rating"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tvLocationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_type"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tvLocationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_address"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="6dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnAddReview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/add_review"
            android:src="@drawable/baseline_rate_review_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnAddPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/add_photo"
            android:src="@drawable/baseline_collections_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAddReview"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E0E0E0"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

</LinearLayout>
